--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 //    implementation project(':library')
-    compile 'com.joker.log:JLog:1.1.0'
+    implementation 'com.joker.log:JLog:1.1.0'
 }
